Start developing v2.1.2 / Update dependencies (Update jinja)

--- a/example/lib/widgets/example/database.j2.html
+++ b/example/lib/widgets/example/database.j2.html
@@ -31,7 +31,7 @@
             </td>
           </tr>
           {% endfor %}
-          {% if not allRecords or allRecords|length == 0 %}
+          {% if not allRecords ?? allRecords|length == 0 %}
           <tr>
             <td colspan="3" class="px-4 py-6 text-center text-slate-500">{{ $t('database.table.empty') if $t('database.table.empty') else '—' }}</td>
           </tr>
