--- a/example/lib/widgets/example/person.j2.html
+++ b/example/lib/widgets/example/person.j2.html
@@ -51,7 +51,7 @@
             </td>
           </tr>
           {% endfor %}
-          {% if not allPerson or allPerson|length == 0 %}
+          {% if not allPerson ?? allPerson|length == 0 %}
           <tr>
             <td colspan="100%" class="px-3 py-8 text-center text-slate-500">{{ $t('person.table.empty') }}</td>
           </tr>
