--- a/example/lib/widgets/example/info.j2.html
+++ b/example/lib/widgets/example/info.j2.html
@@ -1,5 +1,9 @@
 {% extends 'template/template.j2.html' %} {% block title %} {{
-$t('sidebar.info') }} {% endblock %} {% block content %}
+$t('sidebar.info') }} 
+{% endblock %} 
+
+{% block content %}
+<a href="{{ $l.route('root.example.form') }}">{{ $l.route('root.example.form') }}</a>
 <div class="my-6">
   <h3 class="text-xl font-semibold text-slate-800">
     {{ $t('webappInfo.title') }}
