Fixed mysql & Advanced form

--- a/example/lib/widgets/example/mysql/_form_edit.j2.html
+++ b/example/lib/widgets/example/mysql/_form_edit.j2.html
@@ -9,10 +9,10 @@
                         name="title"
                         placeholder="{{ $t('mysql.placeholder.title') }}"
                         required
-                        value="{{ $n('form/title/value') }}"
-                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form/title/errors/0') else 'border-slate-300' }}"
+                        value="{{ $n('form_book/title/value') }}"
+                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form_book/title/errors/0') else 'border-slate-300' }}"
                     />
-                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form/title/errors/0') else 'hidden' }}">{{ $n('form/title/errors/0') }}</div>
+                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form_book/title/errors/0') else 'hidden' }}">{{ $n('form_book/title/errors/0') }}</div>
                 </div>
                 <div class="flex min-w-[140px] flex-col">
                     <input
@@ -20,10 +20,10 @@
                         name="author"
                         placeholder="{{ $t('mysql.placeholder.author') }}"
                         required
-                        value="{{ $n('form/author/value') }}"
-                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form/author/errors/0') else 'border-slate-300' }}"
+                        value="{{ $n('form_book/author/value') }}"
+                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form_book/author/errors/0') else 'border-slate-300' }}"
                     />
-                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form/author/errors/0') else 'hidden' }}">{{ $n('form/author/errors/0') }}</div>
+                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form_book/author/errors/0') else 'hidden' }}">{{ $n('form_book/author/errors/0') }}</div>
                 </div>
                 <div class="flex min-w-[160px] flex-col">
                     <input
@@ -31,23 +31,23 @@
                         name="published_date"
                         placeholder="{{ $t('mysql.placeholder.publishedDate') }}"
                         required
-                        value="{{ $n('form/published_date/value') }}"
-                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form/published_date/errors/0') else 'border-slate-300' }}"
+                        value="{{ $n('form_book/published_date/value') }}"
+                        class="h-9 rounded-md border bg-white px-3 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form_book/published_date/errors/0') else 'border-slate-300' }}"
                     />
-                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form/published_date/errors/0') else 'hidden' }}">{{ $n('form/published_date/errors/0') }}</div>
+                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form_book/published_date/errors/0') else 'hidden' }}">{{ $n('form_book/published_date/errors/0') }}</div>
                 </div>
                 <div class="flex min-w-[140px] flex-col">
                     <select
                         name="category_id"
-                        class="h-9 rounded-md border bg-white px-2 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form/category_id/errors/0') else 'border-slate-300' }}"
+                        class="h-9 rounded-md border bg-white px-2 text-xs shadow-sm focus:border-primary-500 focus:ring-2 focus:ring-primary-500/30 {{ 'border-rose-500 ring-2 ring-rose-300' if $n('form_book/category_id/errors/0') else 'border-slate-300' }}"
                     >
                         <option value=""></option>
-                        {% set selected = $n('form/category_id/value') %}
-                        {% for category in categories %}
+                        {% set selected = $n('form_book/category_id/value') %}
+                        {% for category in $n('form_book/category_id/options') %}
                             <option value="{{ category.id }}" {{ 'selected' if selected == category.id else '' }}>{{ category.title }}</option>
                         {% endfor %}
                     </select>
-                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form/category_id/errors/0') else 'hidden' }}">{{ $n('form/category_id/errors/0') }}</div>
+                    <div class="mt-1 text-[10px] text-rose-600 {{ '' if $n('form_book/category_id/errors/0') else 'hidden' }}">{{ $n('form_book/category_id/errors/0') }}</div>
                 </div>
                 {% if(action == 'edit' ?? action == 'update') %}
                 <input type="hidden" name="id" value="{{ id }}" />
